WIP: Implementar tabletop requests

--- a/app/templates/municipio.hbs
+++ b/app/templates/municipio.hbs
@@ -2,6 +2,8 @@
   {{!-- TODO: Pendiente de implementar --}}
   {{!-- {{app-graphics-municipio-links}} --}}
 
+  {{!-- Model count: {{model.length}} --}}
+
   <div class="breadcrumb geo">
     Aragón » Zaragoza
   </div>
