Trabajar diseño de URLs y obtensión de data

--- a/app/templates/components/app-graphics-sidebar.hbs
+++ b/app/templates/components/app-graphics-sidebar.hbs
@@ -3,7 +3,7 @@
     <a href="/">
       <img
         width="158"
-        src="/assets/LogoGobiertoPresupuestos-b6db45b8a302271bc0c2b546a9adac1d20c0e198b224ca74304234dc6f1e5290.png"
+        src="/images/logo.png"
         alt="Logogobiertopresupuestos">
       </a>
   </div>
