--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,9 @@
-{{outlet}}
+<ul>
+  {{#each model as |municipio|}}
+    <li>
+      {{#link-to 'municipio' municipio.municipio}}
+        {{municipio.nombreMunicipio}}
+      {{/link-to}}
+    </li>
+  {{/each}}
+</ul>
