WIP: Implementar indicadores

--- a/app/templates/municipio.hbs
+++ b/app/templates/municipio.hbs
@@ -30,7 +30,7 @@
   {{!-- {{app-graphics-municipio-sharing-links}} --}}
 </header>
 
-{{app-graphics-municipio-main-metrics}}
+{{app-graphics-municipio-main-metrics municipio=model}}
 
 {{app-graphics-municipio-graphics}}
 
