Implementar gráfica de lineas con ember-highcharts

--- a/app/templates/municipio.hbs
+++ b/app/templates/municipio.hbs
@@ -32,7 +32,7 @@
 
 {{app-graphics-municipio-main-metrics municipio=model}}
 
-{{app-graphics-municipio-graphics}}
+{{app-graphics-municipio-graphics municipio=model}}
 
 <div class="section_separator" name="separator">
   <div class="sep"></div>
