--- a/app/templates/components/app-graphics-municipio-graphics.hbs
+++ b/app/templates/components/app-graphics-municipio-graphics.hbs
@@ -15,13 +15,13 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="zaragoza">
-              <td class="zaragoza">
+            <tr>
+              <td>
                 <i class="le le-place" style="background: rgb(42, 137, 152);"></i>
               </td>
-              <td class="zaragoza">Zaragoza</td>
-              <td class="value right zaragoza">1.027,37 €</td>
-              <td class="dif right zaragoza">+2.56%</td>
+              <td></td>
+              <td class="value right">1.027,37 €</td>
+              <td class="dif right">+2.56%</td>
             </tr>
             <tr class="mean_national">
               <td class="mean_national">
@@ -30,22 +30,6 @@
               <td class="mean_national">Media Nacional</td>
               <td class="value right mean_national">957,71 €</td>
               <td class="dif right mean_national">-7.02%</td>
-            </tr>
-            <tr class="mean_autonomy">
-              <td class="mean_autonomy">
-                <i class="le le-com" style="background: rgb(248, 180, 25);"></i>
-              </td>
-              <td class="mean_autonomy">Media Autonómica</td>
-              <td class="value right mean_autonomy">1.300,35 €</td>
-              <td class="dif right mean_autonomy">-14.23%</td>
-            </tr>
-            <tr class="mean_province">
-              <td class="mean_province">
-                <i class="le le-province" style="background: rgb(244, 208, 111);"></i>
-              </td>
-              <td class="mean_province">Media Provincial</td>
-              <td class="value right mean_province">1.389,84 €</td>
-              <td class="dif right mean_province">-14.16%</td>
             </tr>
           </tbody>
         </table>
