Add and replace stuff

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,10 +1,1 @@
-<ul>
-  {{#each model as |municipio|}}
-    <li>
-      {{#link-to 'municipio' municipio.municipio}}
-        {{municipio.nombreMunicipio}}
-      {{/link-to}}
-    </li>
-  {{/each}}
-</ul>
-
+Sup yo
