--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,7 @@
 <div class="container">
-  <div class="main_content clearfix">
-    {{outlet}}
+  <div class="row">
+    <div class="col-lg-12">
+      {{outlet}}
+    </div>
   </div>
 </div>
