--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,1 +1,48 @@
-Sup yo
+<div class="darrow">
+  <img src="assets/img/down.png" />
+</div>
+
+<div class="dtext wow fadeInUp animated">
+  <h3>Presupuestos municipales</h3>
+</div>
+
+<div class="three2 wow fadeInUp animated">
+  <div class="three">
+    <div class="col-lg-4 col-md-4 col-xs-4">
+      <div class="timg">
+        <img src="assets/img/t1.png" />
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-4 col-xs-4">
+      <div class="timg">
+        <img src="assets/img/t2.png" />
+      </div>
+    </div>
+    <div class="col-lg-4 col-md-4 col-xs-4">
+      <div class="timg">
+        <img src="assets/img/t3.png" />
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="after wow fadeInUp animated">
+  <div class="col-lg-12">
+    <div class="form-group">
+      <div class="search">
+        <label for="example-search-button">Departamento</label>
+        <div class="input-group">
+          <input type="search" class="form-control" id="example-search-button" placeholder="search" />
+          <span class="input-group-btn">
+            <button class="btn btn-primary text-uppercase" type="button">
+              <span class="glyphicon glyphicon-search" />
+            </button>
+          </span>
+        </div>
+      </div>
+    </div>
+    <div class="form-group">
+
+    </div>
+  </div>
+</div>
