--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -32,17 +32,32 @@
       <div class="search">
         <label for="example-search-button">Departamento</label>
         <div class="input-group">
-          <input type="search" class="form-control" id="example-search-button" placeholder="search" />
+          <input type="search" class="form-control" id="example-search-button" placeholder="Buscar" />
           <span class="input-group-btn">
-            <button class="btn btn-primary text-uppercase" type="button">
+            <button class="btn text-uppercase" type="button">
               <span class="glyphicon glyphicon-search" />
             </button>
           </span>
         </div>
       </div>
     </div>
-    <div class="form-group">
 
+    <div class="form-group">
+      <div class="search">
+        <label for="example-search-button">Municipio</label>
+        <div class="input-group">
+          <input type="search" class="form-control" id="example-search-button" placeholder="Buscar" />
+          <span class="input-group-btn">
+            <button class="btn text-uppercase" type="button">
+              <span class="glyphicon glyphicon-search" />
+            </button>
+          </span>
+        </div>
+      </div>
+    </div>
+
+    <div class="button">
+      <button type="button" class="btn btn-default">Consultar</button>
     </div>
   </div>
 </div>
