--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -28,36 +28,23 @@
 
 <div class="after wow fadeInUp animated">
   <div class="col-lg-12">
-    <div class="form-group">
-      <div class="search">
-        <label for="example-search-button">Departamento</label>
-        <div class="input-group">
-          <input type="search" class="form-control" id="example-search-button" placeholder="Buscar" />
-          <span class="input-group-btn">
-            <button class="btn text-uppercase" type="button">
-              <span class="glyphicon glyphicon-search" />
-            </button>
-          </span>
-        </div>
-      </div>
-    </div>
-
-    <div class="form-group">
-      <div class="search">
-        <label for="example-search-button">Municipio</label>
-        <div class="input-group">
-          <input type="search" class="form-control" id="example-search-button" placeholder="Buscar" />
-          <span class="input-group-btn">
-            <button class="btn text-uppercase" type="button">
-              <span class="glyphicon glyphicon-search" />
-            </button>
-          </span>
-        </div>
-      </div>
-    </div>
+    <label style="margin-right: 10px;">Municipalidad</label>
+    {{#power-select
+      selected=currentMunicipalidad
+      options=model
+      onchange=(action 'selectMunicipalidad')
+      searchField='nombreMunicipio'
+      placeholder='Buscar'
+        as |municipalidad|
+    }}
+      <strong>{{municipalidad.nombreMunicipio}}</strong> <small>{{municipalidad.departamento}}</small>
+    {{/power-select}}
 
     <div class="button">
-      <button type="button" class="btn btn-default">Consultar</button>
+      <button
+        type="button"
+        class="btn btn-default"
+      >Consultar</button>
     </div>
   </div>
 </div>
