WIP: Levantar plantilla gráfica definitva

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -16,3 +16,12 @@
 .form-control {
     margin-left: 10px;
 }
+
+.blue-text {
+    color: #1b95d4;
+}
+
+.social-network {
+    color: #0f3653;
+    font-size: 24px;
+}
