--- a/app/templates/components/app-graphics-municipio-main-metrics.hbs
+++ b/app/templates/components/app-graphics-municipio-main-metrics.hbs
@@ -52,7 +52,7 @@
     <div class="label">Ejecución vs Presupuestado</div>
     {{!-- TODO: Evaluar convertir en CP --}}
     <div class="main sign-up">
-      {{porcentajeEjecucion}} % ({{format-number municipio.gastoTotal symbol="Q"}})
+      {{porcentajeEjecucion}} % ({{format-number municipio.gastoTotal}})
     </div>
   </div>
 
