--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,5 @@
 <div class="darrow">
-  <img src="assets/img/down.png" />
+  <img src="/assets/img/down.png" />
 </div>
 
 <div class="dtext wow fadeInUp animated">
@@ -44,6 +44,7 @@
       <button
         type="button"
         class="btn btn-default"
+        {{action 'consultarMunicipalidad'}}
       >Consultar</button>
     </div>
   </div>
