--- a/app/templates/components/app-graphics-municipio-graphics.hbs
+++ b/app/templates/components/app-graphics-municipio-graphics.hbs
@@ -1,4 +1,4 @@
-<div class="metric_graphs clearfix">
+{{!-- <div class="metric_graphs clearfix">
   <div class="widget_graph show clearfix">
     <div class="col-1-2" id="lines_chart">
       {{high-charts content=chartData chartOptions=chartOptions}}
@@ -45,4 +45,6 @@
       </div>
     </div>
   </div>
-</div>
+</div> --}}
+
+{{high-charts content=chartData chartOptions=chartOptions}}
