--- a/app/templates/municipio.hbs
+++ b/app/templates/municipio.hbs
@@ -93,13 +93,13 @@
       </div>
     </div>
     <div class="col-lg-12">
-      <div class="grey wow  slideInUp animated">
+      <div class="grey wow slideInUp animated">
+       {{app-graphics-municipio-graphics municipio=model}}
+     </div>
+     <div class="grey wow slideInUp animated">
        &nbsp;
      </div>
-     <div class="grey wow  slideInUp animated">
-       &nbsp;
-     </div>
-     <div class="grey wow  slideInUp animated">
+     <div class="grey wow slideInUp animated">
        &nbsp;
      </div>
     </div>
