--- a/app/templates/municipio.hbs
+++ b/app/templates/municipio.hbs
@@ -72,34 +72,36 @@
 
 <div class="full">
   <div class="box">
-    <div class="col-lg-3 col-md-3 col-xs-3">
-      <div class="l1">
-        <img src="/assets/img/one.jpg" />
+    <div class="metrics-container">
+      <div class="col-lg-3 col-md-3 col-xs-3">
+        <div class="l1">
+          <img src="/assets/img/one.jpg" />
+        </div>
       </div>
-    </div>
-    <div class="col-lg-3 col-md-3 col-xs-3">
-      <div class="l1">
-        <img src="/assets/img/two.jpg" />
+      <div class="col-lg-3 col-md-3 col-xs-3">
+        <div class="l1">
+          <img src="/assets/img/two.jpg" />
+        </div>
       </div>
-    </div>
-    <div class="col-lg-3 col-md-3 col-xs-3">
-      <div class="l1">
-        <img src="/assets/img/three.jpg" />
+      <div class="col-lg-3 col-md-3 col-xs-3">
+        <div class="l1">
+          <img src="/assets/img/three.jpg" />
+        </div>
       </div>
-    </div>
-    <div class="col-lg-3 col-md-3 col-xs-3">
-      <div class="l1">
-        <img src="/assets/img/four.jpg" />
+      <div class="col-lg-3 col-md-3 col-xs-3">
+        <div class="l1">
+          <img src="/assets/img/four.jpg" />
+        </div>
       </div>
     </div>
     <div class="col-lg-12">
-      <div class="grey wow slideInUp animated">
+      <div class="widget-lines-graphic-container wow slideInUp animated">
         {{app-graphics-municipio-lines-graphic municipio=model}}
       </div>
-      <div class="grey wow slideInUp animated">
+      <div class="widget-treemap-graphic-container wow slideInUp animated">
         {{app-graphics-municipio-treemap-graphic municipio=model}}
       </div>
-      <div class="grey wow slideInUp animated">
+      <div class="wow slideInUp animated">
       &nbsp;
       </div>
     </div>
