Crear componente para tabla

--- a/app/templates/municipio.hbs
+++ b/app/templates/municipio.hbs
@@ -102,7 +102,7 @@
         {{app-graphics-municipio-treemap-graphic municipio=model}}
       </div>
       <div class="wow slideInUp animated">
-      &nbsp;
+        {{app-graphics-municipio-data-table municipio=model}}
       </div>
     </div>
   </div>
