--- a/app/templates/municipio.hbs
+++ b/app/templates/municipio.hbs
@@ -99,10 +99,10 @@
         {{app-graphics-municipio-lines-graphic municipio=model}}
       </div>
       <div class="widget-treemap-graphic-container wow slideInUp animated">
-        {{app-graphics-municipio-treemap-graphic municipio=model}}
+        {{app-graphics-municipio-treemap-graphic municipalidad=model}}
       </div>
       <div class="wow slideInUp animated">
-        {{app-graphics-municipio-data-table municipio=model}}
+        {{app-graphics-municipio-data-table municipalidad=model}}
       </div>
     </div>
   </div>
