--- a/app/templates/components/app-graphics-municipio-data-table.hbs
+++ b/app/templates/components/app-graphics-municipio-data-table.hbs
@@ -1,4 +1,7 @@
-{{#light-table table as |t|}}
+{{#light-table table
+  tableClassNames='table table-condensed'
+  as |t|
+}}
   {{t.head
     onColumnClick=(action 'onColumnClick')
     iconAscending='fa fa-sort-asc'
