--- a/app/templates/municipio.hbs
+++ b/app/templates/municipio.hbs
@@ -73,26 +73,7 @@
 <div class="full">
   <div class="box">
     <div class="metrics-container">
-      <div class="col-lg-3 col-md-3 col-xs-3">
-        <div class="l1">
-          <img src="/assets/img/one.jpg" />
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-3 col-xs-3">
-        <div class="l1">
-          <img src="/assets/img/two.jpg" />
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-3 col-xs-3">
-        <div class="l1">
-          <img src="/assets/img/three.jpg" />
-        </div>
-      </div>
-      <div class="col-lg-3 col-md-3 col-xs-3">
-        <div class="l1">
-          <img src="/assets/img/four.jpg" />
-        </div>
-      </div>
+      {{app-graphics-municipio-main-metrics municipalidad=model}}
     </div>
     <div class="col-lg-12">
       <div class="widget-lines-graphic-container wow slideInUp animated">
